Use weak pointers in PeerConnector and Authenticate, should fix a crash.

BUG: 257126